# yolov5rtspthreadpool

./: .augmentignore  .gitignore  FINAL_IMPLEMENTATION_SUMMARY.md  MULTI_STREAM_PROCESSING_SUMMARY.md  PROJECT_SUMMARY.md  TEST_README.md  final_layout_test.sh  test_crash_fix.sh  test_layout_stability.sh  test_multichannel_layout.sh
app/src/main/: AndroidManifest.xml
app/src/main/assets/: test_config.json
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/cpp/draw/: cv_draw.cpp  cv_draw.h
app/src/main/cpp/include/: ChannelManager.h  ChannelStateManager.h  DecoderManager.h  DecoderResourceSharing.h  EnhancedDetectionRenderer.h  FrameRateManager.h  GPUAcceleratedRenderer.h  MultiChannelFrameCompositor.h  MultiStreamDetectionIntegration.h  MultiStreamIntegration.h  MultiStreamProcessor.h  MultiSurfaceRenderer.h  PerChannelDetection.h  RTSPStreamManager.h  ResourceManager.h  SharedResourcePool.h  StreamHealthIntegration.h  StreamHealthMonitor.h  SystemPerformanceMonitor.h  ThreadSafeResourceManager.h  ZLPlayer.h  display_queue.h  user_comm.h
app/src/main/cpp/rkmedia/utils/: mpp_decoder.cpp
app/src/main/cpp/src/: ChannelManager.cpp  ChannelManagerJNI.cpp  ChannelStateManager.cpp  DecoderManager.cpp  DecoderResourceSharing.cpp  EnhancedDetectionRenderer.cpp  FrameRateManager.cpp  GPUAcceleratedRenderer.cpp  MultiChannelFrameCompositor.cpp  MultiChannelZLPlayer.cpp  MultiStreamDetectionIntegration.cpp  MultiStreamProcessor.cpp  MultiSurfaceRenderer.cpp  PerChannelDetection.cpp  RTSPStreamManager.cpp  ResourceManager.cpp  SharedResourcePool.cpp  StreamHealthIntegration.cpp  StreamHealthMonitor.cpp  SystemPerformanceMonitor.cpp  ThreadSafeResourceManager.cpp  ZLPlayer.cpp  display_queue.cpp
app/src/main/cpp/task/: yolov5.cpp  yolov5_thread_pool.cpp
app/src/main/cpp/test/: DecoderResourceSharingTest.cpp  PerChannelDetectionTest.cpp  SharedResourcePoolTest.cpp  StreamHealthIntegrationTest.cpp
app/src/main/java/com/wulala/myyolov5rtspthreadpool/: ChannelConfigManager.java  ChannelManager.java  GridLayoutCalculator.java  MainActivity.java  MultiSurfaceManager.java  NVRLayoutManager.java  TestLauncher.java  TestUtils.java
app/src/main/res/drawable/: layout_button_bg.xml
app/src/main/res/layout/: activity_main.xml  activity_nvr.xml
app/src/main/res/values/: themes.xml
app/src/main/res/values-night/: themes.xml
test_scripts/: run_tests.sh
